--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "routes": [
     {
-      "src": "/api/(.*)",
+      "src": "/test/(.*)",
       "dest": "https://tqs3ft.laf.dev/test"
     }
   ]
