--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "routes": [
     {
-      "src": "/test/(.*)",
-      "dest": "https://tqs3ft.laf.dev/test"
+      "src": "/(.*)",
+      "dest": "https://tqs3ft.laf.dev"
     }
   ]
 }
