--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "https://tqs3ft.laf.dev"
+      "dest": "https://tqs3ft.laf.dev/test"
     }
   ]
 }
