--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
+
 {
-  "routes": [
+  "rewrites": [
     {
-      "src": "/(.*)",
-      "dest": "https://tqs3ft.laf.dev"
+      "source": "/(.*)", // 这是你希望匹配的路径
+      "destination": "https://tqs3ft.laf.dev" // 这是你希望将请求转发到的目标地址
     }
   ]
 }
