--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)", // 这是你希望匹配的路径
+      "source": "/(.*)", /* 这是你希望匹配的路径 */
       "destination": "https://tqs3ft.laf.dev" // 这是你希望将请求转发到的目标地址
     }
   ]
