--- a/vercel.json
+++ b/vercel.json
@@ -13,6 +13,10 @@
       {
         "key" : "Access-Control-Allow-Methods",
         "value" : "DELETE,PUT,POST,GET,OPTIONS"
+      },
+      {
+        "key": "accept",
+        "value": "*/*"
       }
     ]
   }],
