--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,9 @@
   "routes": [
     {
       "src": "/(.*)",
+      "headers": {
+        "Content-Type": "application/xml"
+      },
       "dest": "https://tqs3ft.laf.dev"
     }
   ]
